Fix mobile bottom spacing

--- a/FoodDiary.Web.Client/src/app/components/shared/favorites-section/favorites-section.scss
+++ b/FoodDiary.Web.Client/src/app/components/shared/favorites-section/favorites-section.scss
@@ -14,6 +14,12 @@
     color: var(--fd-color-text);
     cursor: pointer;
     text-align: left;
+
+    &:focus-visible {
+        outline: var(--fd-outline-focus);
+        outline-offset: calc(var(--fd-outline-offset) * -1);
+        border-radius: var(--fd-surface-radius);
+    }
 }
 
 .fd-favorites-section__title-group {
